@@ -1,6 +1,12 @@
 /***********************************************************************
 X3 ChangeLog
 
+2009-09-22  Neil Spierling  <sirvulcan@sirvulcan.co.nz>
+
+	* Srvx sync. Author: Michael Poole.
+
+	* src/recdb.c (explain_failure): When MAIN_LOG is NULL, report to stderr.
+
 2009-09-19  Neil Spierling  <sirvulcan@sirvulcan.co.nz>
 
 	* Srvx sync. Author: Michael Poole.
